# react-native-blur

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  react-native-blur.podspec  react-native.config.js  tsconfig.json
.github/workflows/: ci.yml  publish.yml
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/src/androidTest/: AndroidManifest.xml
android/src/androidTest/java/com/blur/: BackdropBlurTest.kt  BackdropTestActivity.kt  BlurBenchmark.kt  BlurProcessorTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JNIBridge.cpp
android/src/main/java/com/blur/: BackdropBlurView.kt  BackdropBlurViewManager.kt  BlurPackage.kt  BlurProcessor.kt  BlurView.kt  BlurViewManager.kt  NativeBlur.java
blur-core/: CMakeLists.txt
blur-core/cmake/: blur-core-config.cmake.in
blur-core/include/: avx2.h  bitmap.h  boxblur.h  cache.h  gaussian.h  kernel.h  pool.h  scale.h  thread_pool.h
blur-core/src/: boxblur.cpp  cache.cpp  gaussian.cpp  kernel.cpp  pool.cpp  scale.cpp  thread_pool.cpp
blur-core/src/avx2/: gaussian_avx2.cpp
blur-core/src/neon/: gaussian_neon.cpp
blur-core/tests/: benchmark_blur.cpp  test_boxblur.cpp  test_cache.cpp  test_gaussian.cpp  test_kernel.cpp
blur-core/tests/consumer_smoke/: CMakeLists.txt  main.cpp
example/: App.tsx  package.json
scripts/: testlab-benchmark.sh
src/: BackdropBlurView.tsx  BlurView.tsx  NativeBlur.ts  RNBlurViewNativeComponent.ts  index.ts
